shared/src/test/data/yeast/invalid-json/incomplete-entry-2.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key1'
Indicator           9,  2,  7 '\"'
EndScalar          10,  2,  8 ''
Indicator          10,  2,  8 ':'
WhiteSpace         11,  2,  9 ' '
BeginScalar        12,  2, 10 ''
Indicator          12,  2, 10 '\"'
Text               13,  2, 11 'value1'
Indicator          19,  2, 17 '\"'
EndScalar          20,  2, 18 ''
LineBreak          20,  2, 18 '\n'
WhiteSpace         21,  3,  0 '  '
BeginScalar        23,  3,  2 ''
Indicator          23,  3,  2 '\"'
Text               24,  3,  3 'key2'
Indicator          28,  3,  7 '\"'
EndScalar          29,  3,  8 ''
Indicator          29,  3,  8 ':'
WhiteSpace         30,  3,  9 ' '
BeginScalar        31,  3, 10 ''
Indicator          31,  3, 10 '\"'
Text               32,  3, 11 'value2'
Indicator          38,  3, 17 '\"'
EndScalar          39,  3, 18 ''
Indicator          39,  3, 18 ','
LineBreak          40,  3, 19 '\n'
WhiteSpace         41,  4,  0 '  '
BeginScalar        43,  4,  2 ''
Indicator          43,  4,  2 '\"'
Text               44,  4,  3 'key3'
Indicator          48,  4,  7 '\"'
EndScalar          49,  4,  8 ''
Indicator          49,  4,  8 ':'
WhiteSpace         50,  4,  9 ' '
BeginScalar        51,  4, 10 ''
Indicator          51,  4, 10 '\"'
Text               52,  4, 11 'value3'
Indicator          58,  4, 17 '\"'
EndScalar          59,  4, 18 ''
LineBreak          59,  4, 18 '\n'
EndMapping         60,  5,  0 '}'
